...
            )
            ListHideDoneTaskSwitch(
                hideDoneTask = hideDoneTask,
                onClick = { onVisibilitySwitchClick(!hideDoneTask) },
                modifier = Modifier
                    .padding(end = 12.dp)
                    .testTag("hideDoneTaskBtn")
            )
        }
    }
}

@Preview(showBackground = true)
...
