...
                    themeColors.colorRed
                } else {
                    themeColors.supportSeparator
                },
            ),
            modifier = Modifier
                .testTag("todoItemCheckBox")
        )
        Column(
            modifier = Modifier
                .weight(1f)
                .padding(top = 12.dp)
        ) {
...
