...
            ) {
                EditTaskText(
                    text = screenState.text,
                    screenAction = screenAction,
                    modifier = Modifier
                        .padding(horizontal = 16.dp)
                        .testTag("todoItemEditText")
                    ,
                )
                Spacer(modifier = Modifier.height(12.dp))
                EditPriority(
                    priority = screenState.priority,
                    onClick = {
...
